<resources>
    <string name="app_name">MyUni</string>
    <string name="myuni_load_screen">MyUni</string>
    <string name="bg_load_screen">bg load screen</string>
    <string name="SignIn">Войти</string>
    <string name="SingUp">Регистрация</string>
    <string name="bg_select_action">bg select action</string>
    <string name="e_mail_sign_in_screen">Введите e-mail/телефон</string>
    <string name="PassSignIn">Введите пароль</string>
    <string name="SigInAcc">Войдите в профиль</string>
    <string name="BtnRememberPass"><u>Забыли пароль?</u></string>
    <string name="WhoYou">Кто вы?</string>
    <string name="Student">студент</string>
    <string name="waitThisFun">*Эта функция скоро станет доступной</string>
    <string name="TextREG">Регистрация</string>
    <string name="NewLogin">Email / номер телефона</string>
    <string name="SignInPas">Новый пароль</string>
    <string name="SignInPassConfirm">Подтвердить пароль</string>
    <string name="privacy_policy_terms_of_service"><u><![CDATA[Privacy Policy & Terms of Service.]]></u></string>
    <string name="by_continuing_you_agree_to_accept_our">By continuing, you agree to accept our</string>
    <string name="Organ">ОРГАНИЗАЦИЯ*</string>
    <string name="SignInBTN">Войти</string>
    <string name="e_mail_restore">Введите e-mail</string>
    <string name="number_phone_restore">Введите номер телефона</string>
    <string name="Next">Продолжить</string>
    <string name="e_mail_restore_title">Введите свой e-mail или номер телефона, чтобы восстановить пароль</string>
    <string name="code_confirm">Код подтверждения</string>
    <string name="ComeUpWithPass">Придумайте пароль</string>
    <string name="NewPass">Новый пароль</string>
    <string name="ConfirmPassNew">Подтвердить пароль</string>
    <string name="Confirm">Подтвердить</string>
    <string name="IConfirm">Я принимаю условия пользовательского соглашения</string>
    <string name="next">Далее</string>
    <string name="RegScreen">Редактировать</string>
    <string name="load_img_acc">Добавить фото</string>
    <string name="NameUser">Имя Фамилия*</string>
    <string name="BornUser">Год рождения*</string>
    <string name="SelSex">Выберите пол*</string>
    <string name="HintNameSchool">Название учебного заведения*</string>
    <string name="HintCourse">Курс*</string>
    <string name="HintFacultet">Факультет*</string>
    <string name="HintSpec">Специальность*</string>
    <string name="BtnNext">Далее</string>
    <string name="TextVWar">* - поля со звездочкой обязательны для заполнения</string>
    <string name="ReSendCode">Отправить повторно</string>
    <string name="QuestionSend">Не пришло сообщение с кодом?</string>
    <string name="join_our_community">Join Our Community</string>
    <string name="create_an_account_for_full_access_today">Create an account for full access today</string>
    <string name="MyProfile">Мой профиль</string>
    <string name="DescriptionMyProfile">Описание</string>
    <string name="InterestsMyProfile">Интересы</string>
    <string name="SkillsMyProfile">Навыки</string>
    <string name="myuniwelcome">Добро пожаловать\nв MyUni !</string>
    <string name="EventText">События</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FragmentMain">Главная</string>
    <string name="FragmentRibbon">Лента</string>
    <string name="FragmentCreate">Создать</string>
    <string name="FragmentChat">Чат</string>
    <string name="FragmentAcc">Профиль</string>
    <string name="PopularTitle">Популярное</string>
    <string name="TitleАnnouncement">Анонсы</string>
    <string name="TitlePeople">Люди</string>
    <string name="HintSearch">Поиск</string>
    <string name="VUZ">ВУЗ</string>
    <string name="hintFacultet">Факультет: </string>
    <string name="hintSpeciality">Специальность: </string>
    <string name="MyEvent">Мои события</string>
    <string name="SkillText">Услуга</string>
    <string name="Price">Цена</string>
    <string name="Contract">По договоренности*</string>
    <string name="HintSettAcc">Настройки</string>
    <string name="HintInfo">Информация</string>
    <string name="HintEditAccText">Редактировать</string>
    <string name="HintPushNotification">Push-уведомления</string>
    <string name="HintMore"><u>Подробнее</u></string>
    <string name="HintConfidencial">Политика конфиденциальности</string>
    <string name="HintUsloviaObsl">Условия обслуживания</string>
    <string name="HintLicense">Лицензии</string>
    <string name="HintConfidence">Настройки конфиденциальности</string>
    <string name="HintDelAcc">Удалить аккаунт</string>
    <string name="HintAd">Реклама*</string>
    <string name="HintEdit">Редактировать</string>
    <string name="HintMoreItem">ЕЩЁ</string>
    <string name="HintAnalytics">Аналитика</string>
    <string name="HintViews">просмотров</string>
    <string name="HintRepost">репостов</string>
    <string name="HintFavorites">избранное</string>
    <string name="HintNextToTop">ПРОДВИНУТЬ</string>
    <string name="HintBid">Заявки</string>
    <string name="Write">Написать</string>
    <string name="FavList">Ваш список избранных</string>
    <string name="Afisha">Афиша</string>
    <string name="Freelance">Фриланс</string>
</resources>