<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaces.singInU.FinishRestorePassActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_btn_back"
        android:layout_marginTop="36dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_select_act_screen"
            style="@style/LoadScreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/myuni_load_screen" />

        <TextView
            android:id="@+id/text_screen_title"
            style="@style/TextScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/ComeUpWithPass" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pass_cont"
            style="@style/TextFieldDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPass"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pass_confirm_new_cont"
            style="@style/TextFieldDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPassNew"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/MaterialButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Confirm" />

        <TextView
            style="@style/TextHintUr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/by_continuing_you_agree_to_accept_our" />

        <TextView
            android:id="@+id/btn_privacy_policy"
            style="@style/BtnRememberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_terms_of_service" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>