<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaces.singInU.RestorePassCodeActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_btn_back"
        android:layout_marginTop="36dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_select_act_screen"
            style="@style/LoadScreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/myuni_load_screen" />

        <TextView
            android:id="@+id/text_screen_title"
            style="@style/TextScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/code_confirm" />

        <com.github.gongw.VerifyCodeView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:vcTextColor="@color/black"
            app:vcTextCount="4"
            app:vcTextSize="36sp"
            app:vcDividerWidth="8dp"
            app:vcWrapper="centerLine"
            app:vcWrapperColor="#313335"
            app:vcNextWrapperColor="@color/black"
            app:vcWrapperStrokeWidth="2dp"
            tools:ignore="MissingConstraints" />

        <TextView
            style="@style/TextFieldDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:text="@string/QuestionSend"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next_action"
            style="@style/MaterialButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ReSendCode" />

        <TextView
            style="@style/TextScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_our_community"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:textSize="22sp"/>

        <TextView
            style="@style/TextFieldDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account_for_full_access_today"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>